Fix image align

--- a/styles/chatdesign.css
+++ b/styles/chatdesign.css
@@ -655,3 +655,24 @@
   top: 300px; /* Or perhaps different coordinates */
   display: none;
 }
+
+.image_container {
+    margin: 10px;
+    width: 100px;
+    height: 100px;
+    line-height: 115px;
+    text-align: center;
+}
+.resize_fit_center {
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+}
+
+.image_container_recieved {
+    margin: 10px;
+    width: 300px;
+    height: 300px;
+    line-height: 115px;
+    text-align: center;
+}
